# interstice

./: Cargo.toml  IMPLEMENTATION_COMPLETE.md  IMPLEMENTATION_STATUS.txt  PHASE_4_ARCHITECTURE.md  PHASE_4_SUMMARY.md  README.md  V1.0_GETTING_STARTED.md  build_defaults.bash  build_examples.bash  build_modules.bash  count_code_lines.bash  node_schema.toml
crates/interstice-abi/: Cargo.toml
crates/interstice-abi-macros/: Cargo.toml
crates/interstice-abi-macros/src/: interstice_type.rs  lib.rs
crates/interstice-abi/src/: authority.rs  codec.rs  context.rs  error.rs  event.rs  host.rs  host_calls.rs  interstice_type_def.rs  interstice_value.rs  lib.rs  module.rs  query_context.rs  reducer.rs  reducer_context.rs  row.rs  schema.rs  tables.rs  types.rs
crates/interstice-abi/src/host_calls/: audio.rs  file.rs  mod.rs  module.rs  network.rs
crates/interstice-abi/src/host_calls/gpu/: mod.rs
crates/interstice-abi/src/host_calls/input/: key_code.rs  mod.rs
crates/interstice-abi/src/interstice_type/: mod.rs
crates/interstice-abi/src/interstice_value/: index_key.rs  mod.rs  row.rs  validate.rs
crates/interstice-abi/src/interstice_value/convert/: mod.rs  option.rs  primitives.rs  tuple.rs  vec.rs
crates/interstice-abi/src/schema/: dependency.rs  entry.rs  event.rs  mod.rs  module.rs  node.rs  query.rs  reducer.rs  subscription.rs  table.rs  version.rs
crates/interstice-cli/: Cargo.toml  hello_schema.toml  node_schema.toml  transactions_log
crates/interstice-cli/module_defaults/: audio.wasm  graphics.wasm  input.wasm  module_manager.wasm  network.wasm  ui.wasm
crates/interstice-cli/module_examples/: agar_client.wasm  agar_server.wasm  audio.wasm  audio_example.wasm  benchmark_workload.wasm  browser_example.wasm  caller.wasm  caller_example.wasm  desktop_example.wasm  graphics.wasm  graphics_example.wasm  hello.wasm  hello_example.wasm  http_get_example.wasm  ui_example.wasm
crates/interstice-cli/src/: advanced_log.rs  benchmark.rs  bindings.rs  call_query.rs  call_reducer.rs  data_directory.rs  example.rs  init.rs  lib.rs  main.rs  module.rs  node_client.rs  node_registry.rs  node_utils.rs  publish.rs  start.rs  tracer.rs  update.rs
crates/interstice-cli/src/benchmark/: command.rs  mod.rs  network.rs  report.rs  runner.rs  template.rs  types.rs  util.rs
crates/interstice-core/: Cargo.toml
crates/interstice-core/src/: app.rs  audio.rs  authority.rs  error.rs  event.rs  graphics.rs  lib.rs  logger.rs  logging.rs  module.rs  node.rs  reducer.rs  subscription.rs  table.rs
crates/interstice-core/src/host/: abort.rs  call_reducer.rs  dispatch.rs  log.rs  mod.rs  reducer.rs  table.rs
crates/interstice-core/src/host_calls/: dispatch.rs  log.rs  mod.rs  reducer.rs  table.rs
crates/interstice-core/src/host_calls/gpu/: compute.rs  conversions.rs  dispatch.rs  general.rs  mod.rs  render.rs  ressource.rs
crates/interstice-core/src/host_calls/input/: from_winit.rs  mod.rs
crates/interstice-core/src/network/: mod.rs  packet.rs  peer.rs  protocol.rs
crates/interstice-core/src/persistence/: config.rs  determinism.rs  log_rotation.rs  log_validation.rs  migration.rs  mod.rs  peer_tokens.rs  replay.rs  schema_versioning.rs  table_store.rs  tests.rs  transaction_log.rs  types.rs
crates/interstice-core/src/runtime/: authority.rs  deterministic_random.rs  event.rs  index.rs  mod.rs  module.rs  query.rs  reducer.rs  scan.rs  scheduler.rs  table.rs  table_access.rs  tests.rs  transaction.rs
crates/interstice-core/src/runtime/host_calls/: dispatch.rs  file.rs  log.rs  mod.rs  module.rs  node.rs  query.rs  random.rs  reducer.rs  schedule.rs  table.rs  time.rs
crates/interstice-core/src/runtime/host_calls/audio/: mod.rs
crates/interstice-core/src/runtime/host_calls/file/: mod.rs
crates/interstice-core/src/runtime/host_calls/gpu/: compute.rs  conversions.rs  (+5 more)
crates/interstice-core/src/runtime/table/: auto_inc.rs  index.rs  mod.rs
crates/interstice-core/src/runtime/wasm/: instance.rs  linker.rs  mod.rs
crates/interstice-core/src/wasm/: engine.rs  hostcalls.rs  instance.rs  linker.rs  mod.rs
crates/interstice-sdk/: Cargo.toml
crates/interstice-sdk-core/: Cargo.toml
crates/interstice-sdk-core/src/: advanced_examples.rs  caps.rs  context.rs  host_calls.rs  lib.rs  module_toml.rs  reducer_context.rs  reducer_signature.rs  registry.rs  subscription.rs  table_handle.rs  table_row.rs  typed_context.rs  typed_examples.rs  typed_helpers.rs  types.rs
crates/interstice-sdk-core/src/host_calls/: audio.rs  core.rs  file.rs  gpu.rs  mod.rs  module.rs  network.rs
crates/interstice-sdk-macros/: Cargo.toml
crates/interstice-sdk-macros/src/: caps_bounds.rs  context_caps.rs  index_key.rs  init.rs  interstice_type.rs  lib.rs  path_segments.rs  reducer.rs  table.rs  table_access_tokens.rs
crates/interstice-sdk-macros/src/query/: mod.rs  schema.rs  wrapper.rs
crates/interstice-sdk-macros/src/reducer/: mod.rs  schema.rs  subscription.rs  wrapper.rs
crates/interstice-sdk/src/: bindings.rs  internal.rs  lib.rs  macros.rs  registry.rs
crates/interstice-sdk/src/bindings/: mod.rs  module.rs  node.rs  query.rs  reducer.rs  table.rs  type_definition.rs
crates/interstice-ui/: Cargo.toml
crates/interstice-ui/src/: draw.rs  layout.rs  lib.rs  text.rs  types.rs
modules/defaults/graphics/: Cargo.toml
modules/defaults/graphics/src/: draw.rs  font.rs  helpers.rs  layers.rs  lib.rs  render.rs  resources.rs  surfaces.rs  tables.rs  types.rs
modules/defaults/network/: Cargo.toml
modules/defaults/network/src/: dns.rs  lib.rs
modules/examples/browser/: Cargo.toml
modules/examples/browser/src/: css.rs  html.rs  images.rs  lib.rs  nav.rs  page.rs  render.rs  style.rs  table.rs  tables.rs  url.rs  widgets.rs
modules/examples/browser/src/bindings/: graphics.toml  input.toml  network.toml
modules/examples/caller/: Cargo.toml
modules/examples/caller/src/: lib.rs
modules/examples/caller/src/bindings/: node_example_8080.toml  node_hello_example.toml
modules/graphics/: Cargo.toml
modules/graphics/src/: lib.rs
modules/hello/: Cargo.toml
modules/hello/src/: lib.rs
(+115 files in other folders)
