[package]
name = "interstice-abi-macros"
version = "0.1.0"
edition = "2024"
license = "MIT"
license-file = "LICENSE"
description = "Procedural macros for generating ABI types and helpers for Interstice"
readme = "../../README.md"
repository = "https://github.com/naloween/interstice"
keywords = ["interstice", "wasm", "proc-macro"]
[package.metadata.docs.rs]
all-features = true

[lib]
proc-macro = true

[dependencies]
syn = { version = "2", features = ["full"] }
quote = "1"
proc-macro2 = "1"
proc-macro-crate = "3"
