[package]
name = "interstice-abi"
version = "0.3.0"
edition = "2024"
license = "MIT"
description = "WASM ABI types and host-call interfaces for the Interstice runtime"
readme = "../../README.md"
repository = "https://github.com/naloween/interstice"
homepage = "https://github.com/naloween/interstice"
keywords = ["interstice", "wasm", "abi", "runtime"]
[package.metadata.docs.rs]
all-features = true

[dependencies]
serde = "1.0"
postcard = { version = "1.1.3", features = ["alloc"] }
toml = "0.9"
interstice-abi-macros = { path = "../interstice-abi-macros", version = "0.3.0" }
bitflags = { version = "2.10", features = ["serde"] }
