[package]
name = "interstice-cli"
version = "0.0.1"
edition = "2021"

[[bin]]
name = "interstice-cli"
path = "src/main.rs"

[dependencies]
interstice-core = { path = "../interstice-core" }
interstice-abi = { path = "../interstice-abi" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
