[package]
name = "interstice-cli"
version = "0.1.0"
edition = "2024"
license = "MIT"
license-file = "LICENSE"
description = "Command-line tools to run and manage Interstice nodes and modules"
readme = "../../README.md"
repository = "https://github.com/naloween/interstice"
keywords = ["interstice", "cli", "wasm", "runtime"]
[package.metadata.docs.rs]
all-features = true

[[bin]]
name = "interstice-cli"
path = "src/main.rs"

[dependencies]
interstice-core = { path = "../interstice-core", version = "0.1.0" }
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1.49", features = ["full"] }
