[package]
name = "interstice-cli"
version = "0.2.0"
edition = "2024"
license = "MIT"
description = "Command-line tools to run and manage Interstice nodes and modules"
readme = "../../README.md"
repository = "https://github.com/naloween/interstice"
keywords = ["interstice", "cli", "wasm", "runtime"]
[package.metadata.docs.rs]
all-features = true

[[bin]]
name = "interstice-cli"
path = "src/main.rs"

[dependencies]
directories = "6.0.0"
interstice-core = { path = "../interstice-core", version = "0.2.0" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.49", features = ["full"] }
uuid = { version = "1.20.0", features = ["v4"] }
