[package]
name = "interstice-core"
version = "0.3.0"
edition = "2024"
license = "MIT"
description = "Core runtime for loading and executing Interstice WASM modules"
readme = "../../README.md"
repository = "https://github.com/naloween/interstice"
keywords = ["interstice", "wasm", "runtime", "wasmtime"]
[package.metadata.docs.rs]
all-features = true

[dependencies]
interstice-abi = { path = "../../crates/interstice-abi", version = "0.3.0" }
wasmtime = { version = "41.0.2", features = ["component-model"] }
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
toml = "0.9"
wgpu = "28.0"
winit = "0.30.12"
pollster = "0.4.0"
cpal = "0.15.3"
uuid = { version = "1.20", features = ["v4"] }
tokio = { version = "1.49", features = ["full"] }
colored_text = "0.3.0"
notify = "6.1"
