[package]
name = "interstice-sdk-core"
version = "0.3.0"
edition = "2024"
license = "MIT"
description = "Core SDK utilities used by Interstice modules and macros"
readme = "../../README.md"
repository = "https://github.com/naloween/interstice"
keywords = ["interstice", "wasm", "sdk", "core"]
[package.metadata.docs.rs]
all-features = true

[dependencies]
interstice-abi = { path = "../interstice-abi", version = "0.3.0" }
lazy_static = "1.5"
serde = "1.0"
