[package]
name = "interstice-sdk-macros"
version = "0.1.0"
edition = "2024"
license = "MIT"
description = "Procedural macros to generate typed SDK bindings for Interstice modules"
readme = "../../README.md"
repository = "https://github.com/naloween/interstice"
keywords = ["interstice", "wasm", "proc-macro", "sdk"]
[package.metadata.docs.rs]
all-features = true

[lib]
proc-macro = true

[dependencies]
syn = { version = "2", features = ["full"] }
quote = "1"
proc-macro2 = "1"
interstice-abi = { path = "../interstice-abi", version = "0.1.0" }
interstice-sdk-core = { path = "../interstice-sdk-core", version = "0.1.0" }
