[package]
name = "interstice-sdk"
version = "0.1.0"
edition = "2024"
license = "MIT"
license-file = "LICENSE"

[dependencies]
interstice-abi = { path = "../interstice-abi" }
interstice-sdk-core = { path = "../interstice-sdk-core" }
interstice-sdk-macros = { path = "../interstice-sdk-macros" }
wee_alloc = "0.4"
