[package]
name = "interstice-ui"
version = "0.5.0"
edition = "2024"
license = "MIT"
publish = false
description = "Reusable immediate-retained UI layout/render engine for Interstice modules"
repository = "https://github.com/naloween/interstice"

[dependencies]
interstice-sdk = "0.5.0"
# Real proportional font metrics (advances, line height) used for layout. The
# graphics renderer rasterizes the *same* embedded font with the *same* scale
# convention, so measured and drawn glyph positions agree across the ABI.
ab_glyph = "0.2"
