[package]
name = "graphics"
version = "0.0.1"
edition = "2021"
license = "MIT"
license-file = "LICENSE"
publish = false

[lib]
crate-type = ["cdylib"]

[dependencies]
wee_alloc = "0.4"
interstice-sdk = { path = "../../crates/interstice-sdk" }

[build-dependencies]
interstice-sdk = { path = "../../crates/interstice-sdk" }
