[package]
name = "graphics"
version = "0.1.0"
edition = "2024"
publish = false

[lib]
crate-type = ["cdylib"]

[dependencies]
interstice-sdk = "0.5.0"
# Real font rasterization for text: a glyph atlas built from the same embedded
# face (and same PxScale convention) the UI engine measures with, so drawn
# glyph positions match the engine's layout.
ab_glyph = "0.2"

[build-dependencies]
interstice-sdk = "0.5.0"
