[package]
name = "network"
version = "0.1.0"
edition = "2024"
publish = false

[lib]
crate-type = ["cdylib"]

[dependencies]
interstice-sdk = "0.5.0"
# Pure-Rust (miniz_oxide) backend so it compiles to wasm32-unknown-unknown — used
# to inflate gzip/deflate Content-Encoding response bodies.
flate2 = "1.0"

[build-dependencies]
interstice-sdk = "0.5.0"
