[package]
name = "browser-example"
version = "0.1.0"
edition = "2024"
publish = false

[lib]
crate-type = ["cdylib"]

[dependencies]
interstice-sdk = "0.5.0"
interstice-ui = "0.5.0"
# Pure-Rust HTML parser (no_std-friendly, builds for wasm).
tl = "0.7"
# Image decoding for <img>. Pure-Rust decoders only — keeps the wasm small and
# avoids C dependencies. GIF decodes to its first frame (no animation); WebP
# covers the lossy/lossless stills modern sites serve.
image = { version = "0.25", default-features = false, features = ["png", "jpeg", "gif", "webp"] }
# SVG rasterization for <img src=*.svg> (Wikipedia serves many icons/logos as
# SVG). default-features off drops the text/system-font stack (fontdb, memmap)
# that doesn't fit wasm — vector icons rasterize fine without it.
resvg = { version = "0.45", default-features = false }

[build-dependencies]
interstice-sdk = "0.5.0"
