[package]
name = "caller-example"
version = "0.0.1"
edition = "2024"
license = "MIT"
publish = false

[lib]
crate-type = ["cdylib"]

[dependencies]
wee_alloc = "0.4"
interstice-sdk = { path = "../../../crates/interstice-sdk" }

[build-dependencies]
interstice-sdk = { path = "../../../crates/interstice-sdk" }
